@@ -1,5 +1,8 @@
 0.3.4 (dev)
+  BugFix: Remove and install command was not working.
   Now using the unified qt-sudo project (https://github.com/aarnt/qt-sudo) for privilege escalation.
+  All transaction look first for xbps-install/xbps-remove wrappers on /usr/local/bin path,
+    which can be used to emulate hooks.
 
 0.3.3 (2023/12/24)
   BugFix: Notifier was not syncing repos (thanks to dexgs).
